--- a/index.html
+++ b/index.html
@@ -370,83 +370,83 @@
 </footer>
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <button type="button" class="modal-close-btn" data-modal-close>
-                <svg class="modal-close-svg" width="11" height="11">
+            <button type="button" class="modal__btn" data-modal-close>
+                <svg class="modal__svg" width="11" height="11">
                     <use href="./images/icons.svg#icon-close"></use>
                 </svg>
             </button>
-            <p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
+            <p class="form__title">Залиште свої дані, ми вам передзвонимо</p>
             <form>  
-                <div class="modal-field">
-                <label for="name" class="modal-lable">Ім'я</label>
-                <div class="modal-wrap">
+                <div class="form__field">
+                <label for="name" class="form__lable">Ім'я</label>
+                <div class="form__wrap">
                     <input
                     type="text"
-                    class="modal-input"
+                    class="form__input"
                     name="name"
                     minlength="3"
                     id="name"
                     />
-                    <svg class="modal-name-icon" width="18" height="18">
+                    <svg class="form__icon" width="18" height="18">
                         <use href="./images/icons.svg#icon-person"></use>
                     </svg>
                     </div>
                 </div>
-                <div class="modal-field">
-                    <label for="tel" class="modal-lable">Телефон</label>
-                    <div class="modal-wrap">
+                <div class="form__field">
+                    <label for="tel" class="form__lable">Телефон</label>
+                    <div class="form__wrap">
                     <input 
                     type="tel" 
-                    class="modal-input" 
+                    class="form__input" 
                     name="tel" 
                     minlength="3"
                     id="tel"
                     />
-                    <svg class="modal-name-icon" width="18" height="18">
+                    <svg class="form__icon" width="18" height="18">
                         <use href="./images/icons.svg#icon-phone"></use>
                     </svg>
                     </div>
                 </div>
-                <div class="modal-field">
-                    <label for="email" class="modal-lable">Пошта</label>
-                    <div class="modal-wrap">
+                <div class="form__field">
+                    <label for="email" class="form__lable">Пошта</label>
+                    <div class="form__wrap">
                     <input 
                     type="email" 
-                    class="modal-input" 
+                    class="form__input" 
                     name="email" 
                     minlength="3"
                     id="email"
                     />
-                    <svg class="modal-name-icon" width="18" height="18">
+                    <svg class="form__icon" width="18" height="18">
                         <use href="./images/icons.svg#icon-email"></use>
                     </svg>
                     </div>
                 </div>
-                <div class="modal-comment">
-                    <label for="comment" class="modal-lable">Коментар</label>
+                <div class="form__comment">
+                    <label for="comment" class="form__lable">Коментар</label>
                     <textarea
                     cols="30"
                     rows="5" 
                     type="text" 
-                    class="modal-input-comment" 
+                    class="form__input-comment" 
                     name="comment" 
                     placeholder="Введіть текст"
                     id="comment"
                     ></textarea>
                 </div>
-                <div class="modal-chekbox">
-                <input type="checkbox" class="modal-checkbox-input visually-hidden" name="checkbox" id="checkbox" value="false"/>
-                <label for="checkbox" class="modal-checkbox-label">
-                    <span class="modal-check-span">
-                        <svg class="modal-check-icon" width="11" height="8">
+                <div class="form__chekbox">
+                <input type="checkbox" class="form__checkbox-input visually-hidden" name="checkbox" id="checkbox" value="false"/>
+                <label for="checkbox" class="form__checkbox-label">
+                    <span class="form__check-span">
+                        <svg class="form__check-icon" width="11" height="8">
                             <use href="./images/icons.svg#icon-check"></use>
                         </svg>
                     </span>
                     <span>Погоджуюся з розсилкою та приймаю <a
-                        class="modal-checkbox-link" href="">Умови договору</a>
+                        class="form__checkbox-link" href="">Умови договору</a>
                     </label>
                 </div>
-                <button type="submit" class="modal-btn-sub">Відправити</button>
+                <button type="submit" class="form__sub">Відправити</button>
             </form>
         </div>
     </div>
