--- a/portfolio.html
+++ b/portfolio.html
@@ -235,7 +235,7 @@
                 <li class="footer__main-item">
                     <h3 class="subscribe__title">Підпишіться на розсилку</h3>
                     <div class="subscribe">
-                        <input type="mail" type="email" class="subscribe__input" name="user-sub" placeholder="E-mail"
+                        <input type="email" class="subscribe__input" name="user-sub" placeholder="E-mail"
                             id="user-sub" />
                         <button type="submit" class="subscribe__btn">
                             <span class="subscribe__btn-span">Підписатися</span>
