--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -424,15 +424,7 @@
                 </div>
                 <div class="form__comment">
                     <label for="comment" class="form__lable">Коментар</label>
-                    <textarea
-                    cols="30"
-                    rows="5" 
-                    type="text" 
-                    class="form__input-comment" 
-                    name="comment" 
-                    placeholder="Введіть текст"
-                    id="comment"
-                    ></textarea>
+                    <textarea cols="30" rows="5" class="form__input-comment" name="comment" placeholder="Введіть текст" id="comment"></textarea>
                 </div>
                 <div class="form__chekbox">
                 <input type="checkbox" class="form__checkbox-input visually-hidden" name="checkbox" id="checkbox" value="false"/>
@@ -442,9 +434,9 @@
                             <use href="./images/icons.svg#icon-check"></use>
                         </svg>
                     </span>
-                    <span>Погоджуюся з розсилкою та приймаю <a
-                        class="form__checkbox-link" href="">Умови договору</a>
-                    </label>
+                    <span class="form__checkbox-text">Погоджуюся з розсилкою та приймаю&nbsp;</span>
+                    <a class="form__checkbox-link" href="">Умови договору</a>
+                </label>
                 </div>
                 <button type="submit" class="form__sub">Відправити</button>
             </form>
