--- a/index.html
+++ b/index.html
@@ -349,8 +349,8 @@
                 </ul>
             </li>
             <li class="footer__main-item">
-                    <h3 class="subscribe__title">Підпишіться на розсилку</h3>
-                    <div class="subscribe">
+                    <h3 class="footer__soc-title">Підпишіться на розсилку</h3>
+                <form class="subscribe">
                     <input type="email" class="subscribe__input" name="user-sub" placeholder="E-mail"
                         id="user-sub" />
                     <button type="submit" class="subscribe__btn">
@@ -361,7 +361,7 @@
                         </svg>
                     </button>
 
-                </div>
+                </form>
             </li>
 
 
