--- a/index.html
+++ b/index.html
@@ -375,70 +375,70 @@
                     <use href="./images/icons.svg#icon-close"></use>
                 </svg>
             </button>
-            <p class="form__title">Залиште свої дані, ми вам передзвонимо</p>
+            <p class="modal__title">Залиште свої дані, ми вам передзвонимо</p>
             <form>  
-                <div class="form__field">
-                <label for="name" class="form__lable">Ім'я</label>
-                <div class="form__wrap">
+                <div class="modal__field">
+                <label for="name" class="modal__lable">Ім'я</label>
+                <div class="modal__wrap">
                     <input
                     type="text"
-                    class="form__input"
+                    class="modal__input"
                     name="name"
                     minlength="3"
                     id="name"
                     />
-                    <svg class="form__icon" width="18" height="18">
+                    <svg class="modal__icon" width="18" height="18">
                         <use href="./images/icons.svg#icon-person"></use>
                     </svg>
                     </div>
                 </div>
-                <div class="form__field">
-                    <label for="tel" class="form__lable">Телефон</label>
-                    <div class="form__wrap">
+                <div class="modal__field">
+                    <label for="tel" class="modal__lable">Телефон</label>
+                    <div class="modal__wrap">
                     <input 
                     type="tel" 
-                    class="form__input" 
+                    class="modal__input" 
                     name="tel" 
                     minlength="3"
                     id="tel"
                     />
-                    <svg class="form__icon" width="18" height="18">
+                    <svg class="modal__icon" width="18" height="18">
                         <use href="./images/icons.svg#icon-phone"></use>
                     </svg>
                     </div>
                 </div>
-                <div class="form__field">
-                    <label for="email" class="form__lable">Пошта</label>
-                    <div class="form__wrap">
+                <div class="modal__field">
+                    <label for="email" class="modal__lable">Пошта</label>
+                    <div class="modal__wrap">
                     <input 
                     type="email" 
-                    class="form__input" 
+                    class="modal__input" 
                     name="email" 
                     minlength="3"
                     id="email"
                     />
-                    <svg class="form__icon" width="18" height="18">
+                    <svg class="modal__icon" width="18" height="18">
                         <use href="./images/icons.svg#icon-email"></use>
                     </svg>
                     </div>
                 </div>
-                <div class="form__comment">
-                    <label for="comment" class="form__lable">Коментар</label>
-                    <textarea cols="30" rows="5" class="form__input-comment" name="comment" placeholder="Введіть текст" id="comment"></textarea>
+                <div class="modal__comment">
+                    <label for="comment" class="modal__lable">Коментар</label>
+                    <textarea cols="30" rows="5" class="modal__input-comment" name="comment" placeholder="Введіть текст" id="comment"></textarea>
                 </div>
-                <div class="form__chekbox">
-                <input type="checkbox" class="form__checkbox-input visually-hidden" name="checkbox" id="checkbox" value="false"/>
-                <label for="checkbox" class="form__checkbox-label">
-                    <span class="form__check-span">
-                        <svg class="form__check-icon" width="11" height="8">
+                <div class="modal__chekbox">
+                <input type="checkbox" class="modal__checkbox-input visually-hidden" name="checkbox" id="checkbox" value="false"/>
+                <label for="checkbox" class="modal__checkbox-label">
+                    <span class="modal__check-span">
+                        <svg class="modal__check-icon" width="11" height="8">
                             <use href="./images/icons.svg#icon-check"></use>
                         </svg>
                     </span>
-                    <span class="form__checkbox-text">Погоджуюся з розсилкою та приймаю&nbsp;</span>
-                    <a class="form__checkbox-link" href="">Умови договору</a>
+                    <span class="modal__checkbox-text">Погоджуюся з розсилкою та приймаю&nbsp;</span>
+                    <a class="modal__checkbox-link" href="">Умови договору</a>
                 </label>
                 </div>
-                <button type="submit" class="form__sub">Відправити</button>
+                <button type="submit" class="modal__sub">Відправити</button>
             </form>
         </div>
     </div>
